# snake-using-gloss-demo

./: README.md  snake-using-gloss-demo.cabal
src/: Main.hs  Model.hs  View.hs
