cabal-version:      >=1.10
name:               snake-using-gloss-demo
version:            0.1.0.0
synopsis:           Basic game of Snake using the `gloss` library
homepage:           github.com/xavierpinho/snake-using-gloss-demo

license:            Unlicense
license-file:       UNLICENSE
author:             Xavier Pinho
maintainer:         mail@xavierp.org

category:           Game
build-type:         Simple
extra-source-files: README.md

executable snake-using-gloss-demo
    main-is:          Main.hs
    other-modules:    Model, View
    build-depends:    base >=4.14 && <4.15
                    , gloss >=1.13 && <2
                    , random >=1.1
    hs-source-dirs:   src
    default-language: Haskell98
